# mt32emu

./: meson.build  upstream.wrap
include/mt32emu/: meson.build
include/mt32emu/c_interface/: meson.build
mt32emu/src/: meson.build
